--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
     <head>
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-        <meta name="description" content="Pinegrow Web Editor - SAAS Bootstrap v5 Template"/>
+        <meta name="description" content="Digital Board in Abruzzo"/>
         <meta name="author" content=""/>
-        <title>Pinegrow | Bootstrap Blocks Template</title>
+        <title>Begin Educational | Dalla Digital Board ai contenuti didattici</title>
         <!-- Bootstrap core CSS -->
         <link href="bootstrap_theme/bootstrap.css" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="blocks.css"/>
