Inserita gli elementi che identificano una buona LIM

--- a/index.html
+++ b/index.html
@@ -402,28 +402,28 @@
                     <div class="col-lg-9 ms-auto me-auto">
                         <h2 class="fw-normal h1 mb-1 text-secondary">Quali caratteristiche deve avere una<br/>Digital Board per
                         essere inserita nel PON</h2>
-                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae congue tortor. </p>
+                        <p> Vediamo quali sono le carattestiche minime che un Monitor Intereattivo deve per essere adatta alle aule. </p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-sm-6 col-xl-3 pb-3 pt-3"> <a href="#" class="bg-white border btn d-block link-secondary pb-5 pe-4 ps-4 pt-5"> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="40" height="40" fill="currentColor" class="mb-3 text-primary">
                                 <path d="M3 3h18a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1zm13.464 12.536L20 12l-3.536-3.536L15.05 9.88 17.172 12l-2.122 2.121 1.414 1.415zM6.828 12L8.95 9.879 7.536 8.464 4 12l3.536 3.536L8.95 14.12 6.828 12zm4.416 5l3.64-10h-2.128l-3.64 10h2.128z">
 </path>
-                            </svg> <h3 class="fw-normal h5 text-dark">Dimensione schermo</h3> <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae congue tortor.</p><span class="border-bottom d-inline-block text-dark">Modelli compatibili</span> </a>
+                            </svg> <h3 class="fw-normal h5 text-dark">Dimensione schermo</h3> <p>Considerando le dimensioni medie delle aule, consigliamo una dimensione minima di 65", meglio per 75" per aule grandi. 86" e' indicata per l'aula magna.</p><span class="border-bottom d-inline-block text-dark">Modelli compatibili</span> </a>
                     </div>
                     <div class="col-sm-6 col-xl-3 pb-3 pt-3"> <a href="#" class="bg-white border btn d-block link-secondary pb-5 pe-4 ps-4 pt-5"> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="40" height="40" fill="currentColor" class="mb-3 text-primary">
                                 <path d="M5.636 12.707l1.828 1.829L8.88 13.12 7.05 11.293l1.414-1.414 1.829 1.828 1.414-1.414L9.88 8.464l1.414-1.414L13.12 8.88l1.415-1.415-1.829-1.828 2.829-2.828a1 1 0 0 1 1.414 0l4.242 4.242a1 1 0 0 1 0 1.414L8.464 21.192a1 1 0 0 1-1.414 0L2.808 16.95a1 1 0 0 1 0-1.414l2.828-2.829zm8.485 5.656l4.243-4.242L21 16.757V21h-4.242l-2.637-2.637zM5.636 9.878L2.807 7.05a1 1 0 0 1 0-1.415l2.829-2.828a1 1 0 0 1 1.414 0L9.88 5.635 5.636 9.878z">
 </path>
-                            </svg> <h3 class="fw-normal h5 text-dark">Numero di tocchi</h3> <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae congue tortor.</p><span class="border-bottom d-inline-block text-dark">Cosa vuol dire?</span> </a>
+                            </svg> <h3 class="fw-normal h5 text-dark">Numero di tocchi</h3> <p>Sappiamo che abbbiamo dieci dita ma con minimo 20 tocchi 2 o piu' persone possono interagire e collaborare alla lezione sulla Board.</p><span class="border-bottom d-inline-block text-dark">Cosa vuol dire?</span> </a>
                     </div>
                     <div class="col-sm-6 col-xl-3 pb-3 pt-3"> <a href="#" class="bg-white border btn d-block link-secondary pb-5 pe-4 ps-4 pt-5"> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="40" height="40" fill="currentColor" class="mb-3 text-primary">
                                 <path d="M15 21h-2v-3h-2v3H9v-2H7v2H4a1 1 0 0 1-1-1v-3h2v-2H3v-2h3v-2H3V9h2V7H3V4a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v9h9a1 1 0 0 1 1 1v6a1 1 0 0 1-1 1h-3v-2h-2v2z">
 </path>
-                            </svg> <h3 class="fw-normal h5 text-dark">Software di gestione</h3> <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae congue tortor.</p><span class="border-bottom d-inline-block text-dark">RADIX MDM integrato</span> </a>
+                            </svg> <h3 class="fw-normal h5 text-dark">Software di gestione</h3> <p>Indispensabile per essere certi che i display interattivi siano protetti e che gli insegnanti abbiano sempre accesso al firmware, al software e alle app più recenti..</p><span class="border-bottom d-inline-block text-dark">RADIX MDM integrato</span> </a>
                     </div>
                     <div class="col-sm-6 col-xl-3 pb-3 pt-3"> <a href="#" class="bg-white border btn d-block link-secondary pb-5 pe-4 ps-4 pt-5"> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="40" height="40" fill="currentColor" class="mb-3 text-primary">
                                 <path d="M8 5h3v9H8v3H6v-3H3V5h3V2h2v3zm10 5h3v9h-3v3h-2v-3h-3v-9h3V7h2v3z"></path>
-                            </svg> <h3 class="fw-normal h5 text-dark">Accessori</h3> <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae congue tortor.</p><span class="border-bottom d-inline-block text-dark">Sfoglia il catalogo</span> </a>
+                            </svg> <h3 class="fw-normal h5 text-dark">Accessori</h3> <p>Dai supporti alle telecamere, agli altoparlanti, tutti i nostri accessori sono progettati per essere affidabili, durevoli e ad alte prestazioni.</p><span class="border-bottom d-inline-block text-dark">Sfoglia il catalogo</span> </a>
                     </div>
                 </div>
             </div>
