--- a/_pgbackup/index_1637773279.html
+++ b/_pgbackup/index_1637773279.html
@@ -338,7 +338,7 @@
                                 <div class="justify-content-center row"> 
                                     <div class="col-lg-3 col-md-3 py-3"> 
                                         <div> 
-                                            <img src="img/Luca.png" class="img-fluid img-thumbnail mb-3 rounded-circle w-75" alt="..." style="border-width: 5px; border-color: #ffffff;"/> 
+                                            <img src="img/Luca.png" class="img-fluid img-thumbnail mb-3 rounded-circle w-75" alt="..." style="border-width: 14px;"/> 
                                             <div> 
                                                 <h5 class="fw-bold mb-1 text-uppercase">Luca<br/>Di CLerico</h5> 
                                                 <h4 class="fw-light h4 mb-3">340 4761389</h4> 
@@ -389,7 +389,7 @@
                                     </div>
                                     <div class="col-lg-3 col-md-3 py-3"> 
                                         <div> 
-                                            <img src="img/gaetano2.jpg" class="img-fluid img-thumbnail mb-3 p-0 rounded-circle w-75" alt="..." width="400" height="400" style="border: 10px solid #ffffff;"/> 
+                                            <img src="img/gaetano2.jpg" class="img-fluid img-thumbnail mb-3 p-0 rounded-circle w-75" alt="..." width="400" height="400" style="border-style: solid; border-width: 14px;"/> 
                                             <div> 
                                                 <h5 class="fw-bold mb-1 text-uppercase">gaetano<br/>Lucifora</h5> 
                                                 <h4 class="fw-light h4 mb-3">347 6457503</h4> 
