Aggiunti Blocco Numeri

--- a/_pgbackup/index_1637946259.html
+++ b/_pgbackup/index_1637946259.html
@@ -86,16 +86,16 @@
                     <div class="col-lg-6 me-lg-3 text-center"> 
                         <div class="row"> 
                             <div class="col-lg-6 col-xl-6 pb-3 pt-3 text-center"> 
-                                <img src="img/Num1.svg" class="img-fluid"/> 
+                                <img src="img/Num1.svg" class="img-fluid img-thumbnail"/> 
                             </div>                             
                             <div class="col-lg-6 col-xl-6 pb-3 pt-3 text-center"> 
-                                <img src="img/Num2.svg" class="img-fluid"/> 
+                                <img src="img/Num2.svg" class="img-fluid img-thumbnail"/> 
                             </div>                             
                             <div class="col-lg-6 col-xl-6 pb-3 pt-3 text-center"> 
-                                <img src="img/Num4.svg" class="img-fluid"/> 
+                                <img src="img/Num4.svg" class="img-fluid img-thumbnail"/> 
                             </div>                             
                             <div class="col-lg-6 col-xl-6 pb-3 pt-3 text-center"> 
-                                <img src="img/Num3.svg" class="img-fluid"/> 
+                                <img src="img/Num3.svg" class="img-fluid img-thumbnail"/> 
                             </div>                             
                         </div>                         
                     </div>                     
@@ -1113,22 +1113,31 @@ OPS-M</h3></a>
                         <div id="carousel5" class="carousel slide" data-bs-ride="carousel"> 
                             <div class="carousel-inner"> 
                                 <div class="carousel-item active"> 
-                                    <img src="img/12800169.jpg" class="img-fluid mb-3 rounded-circle testimonial_img" width="200" height="200" alt="User image"/> 
-                                    <p class="fw-light h5 mb-4">Veloci e professionali, attenti alle esigenze della scuola. Hanno saputo consigliare le migliori attrezzature per la nostra scuola, e hanno provveduto a installazione e formazione.</p> 
-                                    <h3 class="fw-bold h4 mb-0 text-primary">Maria Giuseppina Centorami</h3> 
-                                    <p>Direttore dei servizi generali e amministrativi</p> 
+                                    <img src="https://images.unsplash.com/photo-1517101724602-c257fe568157?ixid=MXwyMDkyMnwwfDF8c2VhcmNofDZ8fHBhcnJvdHxlbnwwfHx8&ixlib=rb-1.2.1q=85&fm=jpg&crop=faces&cs=srgb&w=360&h=360&fit=crop" class="img-fluid mb-3 rounded-circle testimonial_img" width="200" height="200" alt="User image"/> 
+                                    <p class="fw-light h5 mb-4">Aliqua id fugiat nostrud irure ex duis ea quis id quis ad
+                                    et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim.
+                                    Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id
+                                    deserunt nisi.</p> 
+                                    <h3 class="fw-bold h4 mb-0 text-primary">Kathryn Murphy</h3> 
+                                    <p>Chief Technology Officer</p> 
                                 </div>                                 
                                 <div class="carousel-item"> 
-                                    <img src="img/avatar2.png" class="img-fluid mb-3 rounded-circle testimonial_img" width="200" height="200" alt="User image"/> 
-                                    <p class="fw-light h5 mb-4">Orami una garanzia per affidabilità e correttezza</p> 
-                                    <h3 class="fw-bold h4 mb-0 text-primary">Matteo Farina</h3> 
-                                    <p>Vicario</p> 
+                                    <img src="https://images.unsplash.com/photo-1537151625747-768eb6cf92b2?ixid=MXwyMDkyMnwwfDF8c2VhcmNofDE5fHxkb2d8ZW58MHx8fA&ixlib=rb-1.2.1q=85&fm=jpg&crop=faces&cs=srgb&w=360&h=360&fit=crop" class="img-fluid mb-3 rounded-circle testimonial_img" width="200" height="200" alt="User image"/> 
+                                    <p class="fw-light h5 mb-4">Aliqua id fugiat nostrud irure ex duis ea quis id quis ad
+                                    et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim.
+                                    Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id
+                                    deserunt nisi.</p> 
+                                    <h3 class="fw-bold h4 mb-0 text-primary">Dianne Russell</h3> 
+                                    <p>Chief Technology Officer</p> 
                                 </div>                                 
                                 <div class="carousel-item"> 
-                                    <img src="img/avatar.jpg" class="img-fluid mb-3 rounded-circle testimonial_img" width="200" height="200" alt="User image"/> 
-                                    <p class="fw-light h5 mb-4">Ho conosciuto Begin ad un evento e da allora hanno sempre risposto in modo tempestivo ad ogni mia richiesta di servizi e forniture.</p> 
-                                    <h3 class="fw-bold h4 mb-0 text-primary">Maria Esposito</h3> 
-                                    <p>Direttore Scolastico</p> 
+                                    <img src="https://images.unsplash.com/photo-1574158622682-e40e69881006?ixid=MXwyMDkyMnwwfDF8c2VhcmNofDd8fGNhdHxlbnwwfHx8&ixlib=rb-1.2.1q=85&fm=jpg&crop=faces&cs=srgb&w=360&h=360&fit=crop" class="img-fluid mb-3 rounded-circle testimonial_img" width="200" height="200" alt="User image"/> 
+                                    <p class="fw-light h5 mb-4">Aliqua id fugiat nostrud irure ex duis ea quis id quis ad
+                                    et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim.
+                                    Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id
+                                    deserunt nisi.</p> 
+                                    <h3 class="fw-bold h4 mb-0 text-primary">Darrell Steward</h3> 
+                                    <p>Chief Technology Officer</p> 
                                 </div>                                 
                             </div>                             
                             <ol class="carousel-indicators position-relative"> 
@@ -1245,7 +1254,7 @@ OPS-M</h3></a>
                     </div>                     
                     <div class="col-md-6 col-xl-4 py-3"> 
                         <h2 class="fw-normal h5 mb-4 text-uppercase text-white">Iscriviti alla newsletter</h2> 
-                        <p>Iscriviti alla nostra newsletter e ricevi aggiornamenti esclusivi direttamente nella tua casella di posta.</p> 
+                        <p class="mb-3">Subscribe to our newsletter and get exclusive updates directly in your inbox.</p> 
                         <form class="mb-4"> 
                             <div class="bg-white border input-group p-1 rounded"> 
                                 <input type="email" class="border-0 form-control pe-3 ps-3" placeholder="Enter email..." aria-label="Recipient's email" aria-describedby="button-addon2" required/> 
