--- a/_pgbackup/index_1637946390.html
+++ b/_pgbackup/index_1637946390.html
@@ -1245,7 +1245,7 @@ OPS-M</h3></a>
                     </div>                     
                     <div class="col-md-6 col-xl-4 py-3"> 
                         <h2 class="fw-normal h5 mb-4 text-uppercase text-white">Iscriviti alla newsletter</h2> 
-                        <p>Iscriviti alla nostra newsletter e ricevi aggiornamenti esclusivi direttamente nella tua casella di posta.</p> 
+                        <p class="mb-3">Subscribe to our newsletter and get exclusive updates directly in your inbox.</p> 
                         <form class="mb-4"> 
                             <div class="bg-white border input-group p-1 rounded"> 
                                 <input type="email" class="border-0 form-control pe-3 ps-3" placeholder="Enter email..." aria-label="Recipient's email" aria-describedby="button-addon2" required/> 
