--- a/_pgbackup/index_1637945127.html
+++ b/_pgbackup/index_1637945127.html
@@ -86,16 +86,16 @@
                     <div class="col-lg-6 me-lg-3 text-center"> 
                         <div class="row"> 
                             <div class="col-lg-6 col-xl-6 pb-3 pt-3 text-center"> 
-                                <img src="img/Num1.svg" class="img-fluid"/> 
+                                <img src="http://pinegrow.com/placeholders/img11.jpg" class="img-fluid img-thumbnail"/> 
                             </div>                             
                             <div class="col-lg-6 col-xl-6 pb-3 pt-3 text-center"> 
-                                <img src="img/Num2.svg" class="img-fluid"/> 
+                                <img src="http://pinegrow.com/placeholders/img11.jpg" class="img-fluid img-thumbnail"/> 
                             </div>                             
                             <div class="col-lg-6 col-xl-6 pb-3 pt-3 text-center"> 
-                                <img src="img/Num4.svg" class="img-fluid"/> 
+                                <img src="http://pinegrow.com/placeholders/img11.jpg" class="img-fluid img-thumbnail"/> 
                             </div>                             
                             <div class="col-lg-6 col-xl-6 pb-3 pt-3 text-center"> 
-                                <img src="img/Num3.svg" class="img-fluid"/> 
+                                <img src="http://pinegrow.com/placeholders/img11.jpg" class="img-fluid img-thumbnail"/> 
                             </div>                             
                         </div>                         
                     </div>                     
@@ -415,7 +415,7 @@
             <svg viewBox="0 0 100 100" preserveAspectRatio="none" fill="currentColor" version="1.1" xmlns="http://www.w3.org/2000/svg" width="100%" height="64" class="bg-light d-block text-white" id="pannelli"> 
 </svg>             
         </div>         
-        <section class="pt-3 text-center" id="pannelli"> 
+        <section class=" bg-light pt-3 text-center" id="pannelli"> 
             <div class="container pb-5 pt-5"> 
                 <div class="align-items-center mb-3 row"> 
                     <div class="col-lg-9 ms-auto me-auto"> 
@@ -1049,8 +1049,7 @@
                                         <p class="mb-0 small">Coinvolgi gli studenti ovunque e in ogni momento con il nostro Kit per il supporto all&rsquo;apprendimento a distanza: l&rsquo;accessorio ideale di Promethean per l&rsquo;apprendimento remoto e ibrido.</p> 
                                     </div>
                                 </div>
-                                <div class="pb-2 pt-2">
-                                    <a class="btn btn-secondary btn-sm pe-3 ps-3" href="https://www.prometheanworld.com/it/prodotti/accessori/kit-per-il-supporto-allapprendimento-a-distanza/">Esplora il Kit</a>
+                                <div class="pb-2 pt-2"><a class="btn btn-secondary btn-sm pe-3 ps-3" href="https://www.prometheanworld.com/it/prodotti/accessori/kit-per-il-supporto-allapprendimento-a-distanza/">Esplora il Kit</a>
                                 </div>
                             </div>                             
                         </div>                         
@@ -1064,8 +1063,7 @@
                                         <p class="mb-0 small">Usufruisci di audio nitido e coinvolgente a ogni lezione.</p> 
                                     </div>
                                 </div>
-                                <div class="pb-2 pt-2">
-                                    <a class="btn btn-secondary btn-sm pe-3 ps-3" href="#">Esplora la soundbar</a>
+                                <div class="pb-2 pt-2"><a class="btn btn-secondary btn-sm pe-3 ps-3" href="#">Esplora la soundbar</a>
                                 </div>
                             </div>                             
                         </div>                         
@@ -1079,8 +1077,7 @@
                                         <p class="mb-0 small">Usufruisci di audio nitido e coinvolgente a ogni lezione.</p> 
                                     </div>
                                 </div>
-                                <div class="pb-2 pt-2">
-                                    <a class="btn btn-secondary btn-sm pe-3 ps-3" href="#">Esplora la soundbar</a>
+                                <div class="pb-2 pt-2"><a class="btn btn-secondary btn-sm pe-3 ps-3" href="#">Esplora la soundbar</a>
                                 </div>
                             </div>                             
                         </div>                         
@@ -1095,8 +1092,7 @@ OPS-M</h3></a>
                                         <p class="mb-0 small">Il nostro modulo di elaborazione basato su Intel ti connette all&rsquo;ecosistema Microsoft.</p> 
                                     </div>
                                 </div>
-                                <div class="pb-2 pt-2">
-                                    <a class="btn btn-secondary btn-sm pe-3 ps-3" href="#">Esplora OPS-M</a>
+                                <div class="pb-2 pt-2"><a class="btn btn-secondary btn-sm pe-3 ps-3" href="#">Esplora OPS-M</a>
                                 </div>
                             </div>                             
                         </div>                         
@@ -1113,22 +1109,31 @@ OPS-M</h3></a>
                         <div id="carousel5" class="carousel slide" data-bs-ride="carousel"> 
                             <div class="carousel-inner"> 
                                 <div class="carousel-item active"> 
-                                    <img src="img/12800169.jpg" class="img-fluid mb-3 rounded-circle testimonial_img" width="200" height="200" alt="User image"/> 
-                                    <p class="fw-light h5 mb-4">Veloci e professionali, attenti alle esigenze della scuola. Hanno saputo consigliare le migliori attrezzature per la nostra scuola, e hanno provveduto a installazione e formazione.</p> 
-                                    <h3 class="fw-bold h4 mb-0 text-primary">Maria Giuseppina Centorami</h3> 
-                                    <p>Direttore dei servizi generali e amministrativi</p> 
+                                    <img src="https://images.unsplash.com/photo-1517101724602-c257fe568157?ixid=MXwyMDkyMnwwfDF8c2VhcmNofDZ8fHBhcnJvdHxlbnwwfHx8&ixlib=rb-1.2.1q=85&fm=jpg&crop=faces&cs=srgb&w=360&h=360&fit=crop" class="img-fluid mb-3 rounded-circle testimonial_img" width="200" height="200" alt="User image"/> 
+                                    <p class="fw-light h5 mb-4">Aliqua id fugiat nostrud irure ex duis ea quis id quis ad
+                                    et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim.
+                                    Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id
+                                    deserunt nisi.</p> 
+                                    <h3 class="fw-bold h4 mb-0 text-primary">Kathryn Murphy</h3> 
+                                    <p>Chief Technology Officer</p> 
                                 </div>                                 
                                 <div class="carousel-item"> 
-                                    <img src="img/avatar2.png" class="img-fluid mb-3 rounded-circle testimonial_img" width="200" height="200" alt="User image"/> 
-                                    <p class="fw-light h5 mb-4">Orami una garanzia per affidabilità e correttezza</p> 
-                                    <h3 class="fw-bold h4 mb-0 text-primary">Matteo Farina</h3> 
-                                    <p>Vicario</p> 
+                                    <img src="https://images.unsplash.com/photo-1537151625747-768eb6cf92b2?ixid=MXwyMDkyMnwwfDF8c2VhcmNofDE5fHxkb2d8ZW58MHx8fA&ixlib=rb-1.2.1q=85&fm=jpg&crop=faces&cs=srgb&w=360&h=360&fit=crop" class="img-fluid mb-3 rounded-circle testimonial_img" width="200" height="200" alt="User image"/> 
+                                    <p class="fw-light h5 mb-4">Aliqua id fugiat nostrud irure ex duis ea quis id quis ad
+                                    et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim.
+                                    Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id
+                                    deserunt nisi.</p> 
+                                    <h3 class="fw-bold h4 mb-0 text-primary">Dianne Russell</h3> 
+                                    <p>Chief Technology Officer</p> 
                                 </div>                                 
                                 <div class="carousel-item"> 
-                                    <img src="img/avatar.jpg" class="img-fluid mb-3 rounded-circle testimonial_img" width="200" height="200" alt="User image"/> 
-                                    <p class="fw-light h5 mb-4">Ho conosciuto Begin ad un evento e da allora hanno sempre risposto in modo tempestivo ad ogni mia richiesta di servizi e forniture.</p> 
-                                    <h3 class="fw-bold h4 mb-0 text-primary">Maria Esposito</h3> 
-                                    <p>Direttore Scolastico</p> 
+                                    <img src="https://images.unsplash.com/photo-1574158622682-e40e69881006?ixid=MXwyMDkyMnwwfDF8c2VhcmNofDd8fGNhdHxlbnwwfHx8&ixlib=rb-1.2.1q=85&fm=jpg&crop=faces&cs=srgb&w=360&h=360&fit=crop" class="img-fluid mb-3 rounded-circle testimonial_img" width="200" height="200" alt="User image"/> 
+                                    <p class="fw-light h5 mb-4">Aliqua id fugiat nostrud irure ex duis ea quis id quis ad
+                                    et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim.
+                                    Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id
+                                    deserunt nisi.</p> 
+                                    <h3 class="fw-bold h4 mb-0 text-primary">Darrell Steward</h3> 
+                                    <p>Chief Technology Officer</p> 
                                 </div>                                 
                             </div>                             
                             <ol class="carousel-indicators position-relative"> 
@@ -1245,7 +1250,7 @@ OPS-M</h3></a>
                     </div>                     
                     <div class="col-md-6 col-xl-4 py-3"> 
                         <h2 class="fw-normal h5 mb-4 text-uppercase text-white">Iscriviti alla newsletter</h2> 
-                        <p>Iscriviti alla nostra newsletter e ricevi aggiornamenti esclusivi direttamente nella tua casella di posta.</p> 
+                        <p class="mb-3">Subscribe to our newsletter and get exclusive updates directly in your inbox.</p> 
                         <form class="mb-4"> 
                             <div class="bg-white border input-group p-1 rounded"> 
                                 <input type="email" class="border-0 form-control pe-3 ps-3" placeholder="Enter email..." aria-label="Recipient's email" aria-describedby="button-addon2" required/> 
